[tool.poetry]
name = "marrow-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.3"
openai = "^1.75.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
